2007-11-15 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* media/materials/programs/OffsetMapping.cg: better formal syntax

2007-11-15 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/terrain.cfg: disable vertex lightning as we now use a texture shadow map

2007-11-15 Erik Hjortsberg  <erik.hjortsberg@iteam.se>

	* src/components/ogre/terrain/Makefile.am, src/components/ogre/terrain/TerrainPage.h, src/components/ogre/terrain/TerrainPageShadow.cpp, src/components/ogre/terrain/TerrainPageShadow.h, src/components/ogre/terrain/TerrainPageSurface.cpp, src/components/ogre/terrain/TerrainPageSurface.h, src/components/ogre/terrain/TerrainPageSurfaceCompiler.cpp, src/components/ogre/terrain/TerrainPageSurfaceCompiler.h, src/components/ogre/terrain/TerrainPageSurfaceCompilerTechniqueShader.cpp, src/components/ogre/terrain/TerrainPageSurfaceCompilerTechniqueShader.h, src/components/ogre/terrain/TerrainPageSurfaceCompilerTechniqueSimple.cpp, src/components/ogre/terrain/TerrainPageSurfaceCompilerTechniqueSimple.h, src/components/ogre/terrain/TerrainPageSurfaceLayer.cpp, src/components/ogre/terrain/TerrainPageSurfaceLayer.h, src/components/ogre/terrain/TerrainShader.cpp, src/components/ogre/terrain/TerrainShader.h, media/materials/splatting/Splat.cg: the shader terrain material is now fully functioning

2007-11-15 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
