@@ -139,13 +139,18 @@ void splat_fp
 	
     uniform float4   iScales[4],
     uniform float iNumberOfLayers, //the number of layers NOTE: this is very inefficient, much better to have many different shaders for the different amount of layers, but we'll do it like this for now while we're developing
-    uniform sampler2D   coverageTexture: TEXUNIT0,
-    uniform sampler2D   shadowTexture: TEXUNIT1,
-    uniform sampler2D   baseTextureDiffuse: TEXUNIT2,
+    uniform sampler2D   shadowTexture: TEXUNIT0,
+    uniform sampler2D   baseTextureDiffuse: TEXUNIT1,
+    uniform sampler2D   coverageTexture1: TEXUNIT2,
     uniform sampler2D   splat1TextureDiffuse: TEXUNIT3,
     uniform sampler2D   splat2TextureDiffuse: TEXUNIT4,
     uniform sampler2D   splat3TextureDiffuse: TEXUNIT5,
-    uniform sampler2D   splat4TextureDiffuse: TEXUNIT6
+    uniform sampler2D   splat4TextureDiffuse: TEXUNIT6,
+    uniform sampler2D   coverageTexture2: TEXUNIT7,
+    uniform sampler2D   splat5TextureDiffuse: TEXUNIT8,
+    uniform sampler2D   splat6TextureDiffuse: TEXUNIT9,
+    uniform sampler2D   splat7TextureDiffuse: TEXUNIT10,
+    uniform sampler2D   splat8TextureDiffuse: TEXUNIT11
 )
 {
 	//tile = 0.0025;
@@ -157,18 +162,29 @@ void splat_fp
 		
 		oColor = tex2D(baseTextureDiffuse, iTexcoord.xy * iScales[0].x);
 		if (iNumberOfLayers > 1) {
-			oColor = (lerp(oColor, tex2D(splat1TextureDiffuse, iTexcoord.xy * iScales[0].y), tex2D(coverageTexture, iCoverage.xy).w));
+			oColor = (lerp(oColor, tex2D(splat1TextureDiffuse, iTexcoord.xy * iScales[0].y), tex2D(coverageTexture1, iCoverage.xy).w));
 		}
 		if (iNumberOfLayers > 2) {
-			oColor = (lerp(oColor, tex2D(splat2TextureDiffuse, iTexcoord.xy * iScales[0].z), tex2D(coverageTexture, iCoverage.xy).x));
+			oColor = (lerp(oColor, tex2D(splat2TextureDiffuse, iTexcoord.xy * iScales[0].z), tex2D(coverageTexture1, iCoverage.xy).x));
 		}
 		if (iNumberOfLayers > 3) {
-			oColor = (lerp(oColor, tex2D(splat3TextureDiffuse, iTexcoord.xy * iScales[0].w), tex2D(coverageTexture, iCoverage.xy).y));
+			oColor = (lerp(oColor, tex2D(splat3TextureDiffuse, iTexcoord.xy * iScales[0].w), tex2D(coverageTexture1, iCoverage.xy).y));
 		}
 		if (iNumberOfLayers > 4) {
- 			oColor = (lerp(oColor, tex2D(splat4TextureDiffuse, iTexcoord.xy * iScales[1].x), tex2D(coverageTexture, iCoverage.xy).z));
+ 			oColor = (lerp(oColor, tex2D(splat4TextureDiffuse, iTexcoord.xy * iScales[1].x), tex2D(coverageTexture1, iCoverage.xy).z));
  		}
- 		
+		if (iNumberOfLayers > 5) {
+			oColor = (lerp(oColor, tex2D(splat5TextureDiffuse, iTexcoord.xy * iScales[1].y), tex2D(coverageTexture2, iCoverage.xy).w));
+		}
+		if (iNumberOfLayers > 6) {
+			oColor = (lerp(oColor, tex2D(splat6TextureDiffuse, iTexcoord.xy * iScales[1].z), tex2D(coverageTexture2, iCoverage.xy).x));
+		}
+		if (iNumberOfLayers > 7) {
+			oColor = (lerp(oColor, tex2D(splat7TextureDiffuse, iTexcoord.xy * iScales[1].w), tex2D(coverageTexture2, iCoverage.xy).y));
+		}
+		if (iNumberOfLayers > 8) {
+ 			oColor = (lerp(oColor, tex2D(splat8TextureDiffuse, iTexcoord.xy * iScales[2].x), tex2D(coverageTexture2, iCoverage.xy).z));
+ 		} 		
  		//shadow
  		oColor *= tex2D(shadowTexture, iCoverage.xy).x;
  		
